clusters/prod-cluster/apps/numinia/base/alchemist-tower/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: "alchemist-tower-strip-prefix"
  namespace: numinia
spec:
  stripPrefix:
    prefixes:
      - "${PATH_PREFIX}"
