clusters/prod-cluster/apps/numinia/base/alchemist-tower/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alchemist-tower
  namespace: numinia
  labels:
    environment: pre
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alchemist-tower
      environment: pre
  template:
    metadata:
      labels:
        app: alchemist-tower
        environment: pre
    spec:
      serviceAccountName: aws-secret-manager
      imagePullSecrets:
        - name: github-registry-secret
      nodeSelector:
        NodeType: memory
      tolerations:
        - key: workload
          value: memory
          effect: NoSchedule
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: hyperfy2-efs-claim
      containers:
        - name: alchemist-tower
          image: ghcr.io/numengames/numinia-hyperfy2:sha-612134744b388692724eb3ddffc1597b5a16e43f
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: $(APP_NAME)
          resources:
            requests:
              memory: "${MEMORY}"
              cpu: "$(CPU)"
            limits:
              memory: "$(LIMITS_MEMORY)"
              cpu: "$(LIMITS_CPU)"
