clusters/prod-cluster/apps/numinia/base/alchemist-tower/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $(APP_NAME)
  namespace: $(NAMESPACE)
spec:
  selector:
    app: $(APP_NAME)
  ports:
    - protocol: TCP
      port: $(PORT)
      targetPort: $(PORT)
