clusters/prod-cluster/apps/numinia/base/alchemist-tower/base/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: "alchemist-tower-route"
  namespace: numinia
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`numinia.xyz`) && PathPrefix(`/alchemist-tower`)"
      kind: Rule
      middlewares:
        - name: "alchemist-tower-strip-prefix"
          namespace: numinia
      services:
        - name: "alchemist-tower"
          port: 3000
  tls:
    secretName: numinia-tls
